Enum user_role {
  user
  staff
  admin
}

Enum booking_time_slot {
  morning
  afternoon
}

Enum booking_status {
  pending
  confirmed
  in_progress
  completed
  cancelled
}

Enum payment_method {
  cod
  bank
}

Enum payment_status {
  pending
  paid
  failed
  refunded
}

Enum booking_item_status {
  active
  cancelled
}

Enum review_visibility {
  visible [note: 'stored as is_visible = 1']
  hidden [note: 'stored as is_visible = 0']
}

Enum notification_type {
  booking
  payment
  system
}

Enum contact_status {
  new
  in_progress
  resolved
}

Table users {
  id int [pk, increment]
  name varchar(100) [not null]
  email varchar(191) [not null, unique]
  phone varchar(20) [not null]
  password varchar(255) [not null]
  role user_role [not null, default: 'user']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    role
  }
}

Table services {
  id int [pk, increment]
  name varchar(150) [not null]
  description text
  plant_type varchar(80)
  duration_minutes int [not null, default: 60]
  price decimal(12,2) [not null]
  image varchar(255)
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    price
    plant_type
    is_active
  }
}

Table bookings {
  id int [pk, increment]
  user_id int [null]
  service_id int [null]
  staff_id int [null]
  secondary_staff_id int [null]
  booking_date date [not null]
  time_slot booking_time_slot [not null]
  address varchar(500) [not null]
  note text
  status booking_status [not null, default: 'pending']
  completion_note text
  before_image varchar(255)
  after_image varchar(255)
  payment_method payment_method [not null, default: 'cod']
  payment_status payment_status [not null, default: 'pending']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    user_id
    staff_id
    secondary_staff_id
    service_id
    status
    booking_date
  }
}

Table booking_items {
  id int [pk, increment]
  booking_id int [not null]
  service_id int [not null]
  quantity int [not null, default: 1]
  unit_price decimal(12,2) [not null]
  status booking_item_status [not null, default: 'active']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    booking_id
    service_id
    status
    (booking_id, service_id) [unique, name: 'uq_booking_service']
  }
}

Table reviews {
  id int [pk, increment]
  user_id int [not null]
  service_id int [not null]
  booking_id int [null]
  rating tinyint [not null]
  comment text
  is_visible boolean [not null, default: true]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    service_id
    (user_id, booking_id) [unique, name: 'uq_reviews_user_booking']
  }
}

Table payments {
  id int [pk, increment]
  booking_id int [not null, unique]
  amount decimal(12,2) [not null]
  method payment_method [not null, default: 'cod']
  status payment_status [not null, default: 'pending']
  provider varchar(40)
  transaction_ref varchar(100)
  paid_at datetime
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    status
  }
}

Table notifications {
  id int [pk, increment]
  user_id int [not null]
  booking_id int [null]
  message varchar(500) [not null]
  type notification_type [not null, default: 'booking']
  is_read boolean [not null, default: false]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, is_read)
    created_at
  }
}

Table contacts {
  id int [pk, increment]
  full_name varchar(120) [not null]
  email varchar(191)
  phone varchar(20)
  subject varchar(150)
  message text [not null]
  status contact_status [not null, default: 'new']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    status
    created_at
  }
}

Table booking_staff_assignments {
  id int [pk, increment]
  booking_id int [not null]
  staff_id int [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (booking_id, staff_id) [unique, name: 'uq_booking_staff']
    booking_id
    staff_id
  }
}

Ref: bookings.user_id > users.id
Ref: bookings.service_id > services.id
Ref: bookings.staff_id > users.id
Ref: bookings.secondary_staff_id > users.id
Ref: booking_items.booking_id > bookings.id
Ref: booking_items.service_id > services.id
Ref: reviews.user_id > users.id
Ref: reviews.service_id > services.id
Ref: reviews.booking_id > bookings.id
Ref: payments.booking_id > bookings.id
Ref: notifications.user_id > users.id
Ref: notifications.booking_id > bookings.id
Ref: booking_staff_assignments.booking_id > bookings.id
Ref: booking_staff_assignments.staff_id > users.id
